<resources>
    <string name="app_name">PomoKingdom</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="username1">Username:</string>
    <string name="email">Email</string>
    <string name="email1">Email:</string>
    <string name="password">Password</string>
    <string name="password1">Password:</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password1">Confirm Password:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_itemshop">Item Shop</string>
    <string name="nav_friends">Friends</string>
    <string name="default_time">00:00</string>
    <string name="default_value">0</string>
    <string name="default_phase">Study</string>
    <string name="short_break">Short Break</string>
    <string name="long_break">Long Break</string>
    <string name="study">Study</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="character">Character Name:</string>
    <string name="char2">Character Info:</string>
    <string name="char1">Character Name </string>
    <string name="bypass">Bypass</string>
    <string name="remove">Remove</string>
    <string name="level">Level:</string>
    <string name="add">Add</string>
    <string name="addFriend">Add Friend:</string>
    <string name="default_study">25</string>
    <string name="default_short">5</string>
    <string name="default_long">20</string>
    <string name="current_task">Current Task: </string>
    <string name="default_task">None</string>
    <string name="add_task">Add Task</string>
    <string name="name">Name:</string>
    <string name="xp">XP to Next Level:</string>
    <string name="health">Health:</string>
    <string name="gold">Gold:</string>
    <string name="inventory">Inventory</string>
    <string name="item">Item</string>
    <string name="type">Type</string>
    <string name="equip">Equip</string>
    <string name="equipped">Equipped Items:</string>
    <string name="weapon">Weapon:</string>
    <string name="shield">Shield:</string>
    <string name="armor">Armor:</string>
    <string name="cost">Cost:</string>
    <string name="buy">Buy</string>
    <string name="tasks">Tasks</string>
    <string name="logout"> Logout</string>
</resources>