<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/charInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/char2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/name"
        app:layout_constraintStart_toEndOf="@+id/charInfo"
        app:layout_constraintTop_toTopOf="@+id/charInfo" />

    <TextView
        android:id="@+id/charName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/name1"
        app:layout_constraintTop_toTopOf="@+id/name1" />

    <TextView
        android:id="@+id/level1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/level"
        app:layout_constraintStart_toStartOf="@+id/charInfo"
        app:layout_constraintTop_toBottomOf="@+id/charInfo" />

    <TextView
        android:id="@+id/charLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_value"
        app:layout_constraintStart_toEndOf="@+id/level1"
        app:layout_constraintTop_toTopOf="@+id/level1" />

    <TextView
        android:id="@+id/xpToNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xp"
        app:layout_constraintStart_toStartOf="@+id/name1"
        app:layout_constraintTop_toTopOf="@+id/level1" />

    <TextView
        android:id="@+id/charXp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_value"
        app:layout_constraintStart_toEndOf="@+id/xpToNext"
        app:layout_constraintTop_toTopOf="@+id/xpToNext" />

    <TextView
        android:id="@+id/health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/health"
        app:layout_constraintStart_toStartOf="@+id/level1"
        app:layout_constraintTop_toBottomOf="@+id/level1" />

    <TextView
        android:id="@+id/charHealth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_value"
        app:layout_constraintStart_toEndOf="@+id/health"
        app:layout_constraintTop_toTopOf="@+id/health" />

    <TextView
        android:id="@+id/gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gold"
        app:layout_constraintStart_toStartOf="@+id/xpToNext"
        app:layout_constraintTop_toTopOf="@+id/health" />

    <TextView
        android:id="@+id/charGold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_value"
        app:layout_constraintStart_toEndOf="@+id/gold"
        app:layout_constraintTop_toTopOf="@+id/gold" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/inventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inventoryList"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/equipped"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/weapon"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/weapon_equipped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_task"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/shield"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/shield_equipped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_task"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/armor"
        app:layout_constraintEnd_toStartOf="@+id/armor_equipped"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/armor_equipped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/default_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12" />
</androidx.constraintlayout.widget.ConstraintLayout>